# artha-kirana

./: .gitignore  CLAUDE-1.md  CLAUDE.md  HANDOFF.md  README.md  index.html  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/artha/kirana/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  jni.c
app/src/main/java/com/artha/kirana/: ArthaApplication.kt  MainActivity.kt
app/src/main/java/com/artha/kirana/data/db/: ArthaDatabase.kt
app/src/main/java/com/artha/kirana/data/llm/: IntentRouter.kt  LlmEngine.kt  PaymentParser.kt  SaleParser.kt  ShopDataTools.kt
app/src/main/java/com/artha/kirana/data/notification/: NotificationHelper.kt
app/src/main/java/com/artha/kirana/data/remote/: ChatClient.kt  CloudChatClient.kt  CloudVisionClient.kt  FallbackChatClient.kt  LlmHttpClient.kt
app/src/main/java/com/artha/kirana/data/repository/: CustomerRepositoryImpl.kt  InventoryRepositoryImpl.kt  KhataRepositoryImpl.kt  (+2 more)
app/src/main/java/com/artha/kirana/di/: DatabaseModule.kt  LlmBindModule.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/artha/kirana/ui/: ArthaApp.kt
app/src/main/java/com/artha/kirana/util/: Format.kt  HindiNumbers.kt  ImageUtils.kt  JsonParser.kt  TimeRange.kt
app/src/main/java/com/whispercpp/whisper/: WhisperContext.kt  WhisperLib.kt
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/artha/kirana/: ExampleUnitTest.kt
app/src/test/java/com/artha/kirana/util/: HindiNumbersTest.kt  JsonParserTest.kt  TimeRangeTest.kt
docs/: Artha-Pitch.pptx  NEW-AGENT-PROMPT-cloud-llm.md  STATUS.md  demo-runbook.md  make_deck.py
docs/superpowers/plans/: 2026-06-13-artha-phase0-phase1.md  2026-06-13-artha-phase2-inventory-khata-pnl.md  2026-06-14-analytics-chat-seeder.md  2026-06-14-artha-assistant.md  2026-06-14-artha-edit-recent-entries.md  2026-06-14-cloud-llm-ocr.md  2026-06-14-data-layer-restructure.md
docs/superpowers/specs/: 2026-06-13-artha-llm-http-architecture-design.md  2026-06-13-artha-phase2-design.md  2026-06-14-analytics-chat-seeder-design.md  2026-06-14-artha-assistant-design.md  2026-06-14-artha-edit-recent-entries-design.md  2026-06-14-cloud-llm-ocr-design.md  2026-06-14-cloud-llm-ocr-direction.md  2026-06-14-data-layer-direction.md  2026-06-14-data-layer-restructure-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
presentation/: index.html  main.js  styles.css
scripts/: start-llama-server.sh  validate-intent-prompt.py  validate-sale-prompt.py
(+107 files in other folders)
